# VerFSNext

./: .gitignore  .verfsnext  AGENTS.md  Cargo.toml  README.md  REF_REPORT.md  config.toml  config.toml.example
contrib/systemd/: verfsnext-service.sh  verfsnext-uninstall.sh  verfsnext.service
docs/: fuse_ttl_and_read_path_plan.md  implementation_plan.md  implementation_work_units.md  technical_deep_dive.md
src/: config.rs  main.rs  permissions.rs
src/data/: chunker.rs  compress.rs  hash.rs  mod.rs  pack.rs
src/fs/: chunk.rs  fuse.rs  gc.rs  inode.rs  mod.rs  utils.rs  vault.rs  write.rs
src/gc/: mod.rs
src/meta/: mod.rs
src/migration/: mod.rs  pack_index_crc32.rs  pack_size.rs
src/snapshot/: mod.rs
src/sync/: mod.rs
src/types/: mod.rs
src/vault/: mod.rs
src/write/: batcher.rs
tests/: rsync_integration.rs
