[workspace]
members = [
    ".",
    "vendor/async-fusex",
    "vendor/surrealkv",
]
resolver = "2"

[package]
name = "verfsnext"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "verfsnext"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
async-fusex = { path = "vendor/async-fusex" }
async-trait = "0.1.88"
bytecheck = "0.8.2"
cdc-chunkers = "0.1.3"
crc32c = "0.6.8"
moka = { version = "0.12.10", features = ["sync"] }
nix = { version = "0.26.4", features = ["fs", "user"] }
parking_lot = "0.12.3"
rayon = "1.11.0"
rkyv = { version = "0.8.15" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealkv = { path = "vendor/surrealkv" }
tokio = { version = "1.44.1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.14"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zstd = "0.13.3"
